<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">学术助手</string>
  <string name="app_en_name">Academics</string>
  <string name="user_name">用户名:</string>
  <string name="password">密&#160;&#160;&#160;&#160;码:</string>
  <string name="login">登陆</string>
  <string name="register">注册</string>
  <string name="user_name_register">用&#160;&#160;户&#160;&#160;名:</string>
  <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别:</string>
  <string name="male">男</string>
  <string name="female">女</string>
  <string name="password_register">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
  <string name="repeat_password">重复密码:</string>
  <string name="organization">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位:</string>
</resources>
