<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!-- The title of the Academics, consisting of two TextViews for its Chinese name and English name-->
  <LinearLayout
      android:paddingTop="32dp"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FF530D"
        android:textSize="48sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_en_name"
        android:textSize="24sp"
        android:layout_gravity="center"/>
  </LinearLayout>

  <!-- The inputs for users to log in the Academics, including user
       name and password -->
  <LinearLayout
      android:paddingLeft="32dp"
      android:paddingRight="32dp"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true">
    <!-- Where the user to input the user name-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:paddingRight="8dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text = "@string/user_name"
          android:textSize="16sp"/>
      <EditText
          android:id="@+id/userName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:layout_weight="1"/>
    </LinearLayout>
    <!-- Where the user to input the password-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
          android:paddingRight="8dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/password"
          android:textSize="16sp"/>
      <EditText
          android:id="@+id/password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:layout_weight="1"
          android:password="true"/>
    </LinearLayout>
    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="#FF0000"
        android:text=""/>
  </LinearLayout>

  <!--The button panel composed of login and register button-->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_centerHorizontal="true"
      android:layout_alignParentBottom="true"
      android:paddingLeft="48dp"
      android:paddingRight="48dp"
      android:paddingBottom="16dp">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login"
        android:onClick="onLogInButtonClicked"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/register"/>
  </LinearLayout>
</RelativeLayout>

